--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -29,9 +29,11 @@ html( lang="en" )
             a.menu_home( rel="home" href="/" ) Logux
             .menu_separator
           li
-            a.menu_link.is-current Guide
+            a.menu_link.is-current( href="/guide/architecture/core/" ) Guide
           li
-            a.menu_link( href="/recipes/" ) Recipes
+            a.menu_link( href="/recipes/authentication/" ) Recipes
+          li
+            a.menu_link( href="/protocols/ws/spec/" ) Protocols
           li
             a.menu_link( href="/web-api/" ) Web API
           li
